--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "weeding-photographer-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -16,5 +15,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.11.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shah-Md-Jihan/wedding-photographer-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Shah-Md-Jihan/wedding-photographer-server/issues"
+  },
+  "homepage": "https://github.com/Shah-Md-Jihan/wedding-photographer-server#readme",
+  "description": ""
 }
